force-app/main/default/objects/IPM_Information__c/fields/Optum_Disease_Management_Buy_Ups__c.field-meta.xml
<CustomField>
    <fullName>Optum_Disease_Management_Buy_Ups__c</fullName>
    <inlineHelpText>Input the number of Optum Disease Management programs sold. Programs are as follows: Asthma, COPD, CAD, Diabetes, and Heart Failure</inlineHelpText>
    <label>Optum Disease Management Buy-Ups</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>