force-app/main/default/objects/IPM_Information__c/fields/Optum_Disease_Management_Buy_Ups_Score__c.field-meta.xml
<CustomField>
    <fullName>Optum_Disease_Management_Buy_Ups_Score__c</fullName>
    <label>Optum Disease Management Buy-Ups Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>