force-app/main/default/objects/IPM_Information__c/fields/Optum_EAP__c.field-meta.xml
<CustomField>
    <fullName>Optum_EAP__c</fullName>
    <inlineHelpText>Please indicate if an Employee Assistance Program was purchased via Optum.</inlineHelpText>
    <label>Optum EAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>