force-app/main/default/objects/IPM_Information__c/fields/Optum_EAP_Score__c.field-meta.xml
<CustomField>
    <fullName>Optum_EAP_Score__c</fullName>
    <label>Optum EAP Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>