force-app/main/default/objects/IPM_Information__c/fields/Optum_Personal_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Optum_Personal_Coaching__c</fullName>
    <inlineHelpText>Telephonic or On-site coaching applies.</inlineHelpText>
    <label>zz__Optum TWC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>