force-app/main/default/objects/IPM_Information__c/fields/Optum_TWC_Score__c.field-meta.xml
<CustomField>
    <fullName>Optum_TWC_Score__c</fullName>
    <label>zz__Optum TWC Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>