force-app/main/default/objects/IPM_Information__c/fields/Optum_Worksite_Wellness__c.field-meta.xml
<CustomField>
    <fullName>Optum_Worksite_Wellness__c</fullName>
    <inlineHelpText>Modalities include onsite biometrics, lab form, self-kits.</inlineHelpText>
    <label>Optum Worksite Wellness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>