force-app/main/default/objects/IPM_Information__c/fields/OptumBank_HSA__c.field-meta.xml
<CustomField>
    <fullName>OptumBank_HSA__c</fullName>
    <inlineHelpText>Does customer have Health Savings Account with OptumBank?</inlineHelpText>
    <label>OptumBank HSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carve-In</fullName>
            </value>
            <value>
                <fullName>Optum Direct (Health Advantage Platform)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>