force-app/main/default/objects/IPM_Information__c/fields/OptumBank_HSA_Score__c.field-meta.xml
<CustomField>
    <fullName>OptumBank_HSA_Score__c</fullName>
    <label>OptumBank HSA Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>