force-app/main/default/objects/IPM_Information__c/fields/OptumHealth_Services__c.field-meta.xml
<CustomField>
    <fullName>OptumHealth_Services__c</fullName>
    <inlineHelpText>Select the level of PHS that was sold.</inlineHelpText>
    <label>OptumHealth Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHS 3.0</fullName>
            </value>
            <value>
                <fullName>PHS 3.0 Tier 2</fullName>
            </value>
            <value>
                <fullName>PHS 3.0 Tier 3</fullName>
            </value>
            <value>
                <fullName>PHS 3.0 Tier 4</fullName>
            </value>
            <value>
                <fullName>MHA</fullName>
            </value>
            <value>
                <fullName>CCMU</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>