force-app/main/default/objects/IPM_Information__c/fields/OptumHealth_Services_Buy_Ups__c.field-meta.xml
<CustomField>
    <fullName>OptumHealth_Services_Buy_Ups__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Indicate the number of buy-ups purchased. Buy-ups include Cancer Support, KRS, Ortho Health Support, BRS, Real Appeal, etc</inlineHelpText>
    <label>OptumHealth Services Buy-Ups</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>