force-app/main/default/objects/IPM_Information__c/fields/OptumHealth_Services_Buy_Ups_Score_2__c.field-meta.xml
<CustomField>
    <fullName>OptumHealth_Services_Buy_Ups_Score_2__c</fullName>
    <formula>CASE(TEXT(OptumHealth_Services_Buy_Ups__c),  
    &quot;1&quot;, 8,
    &quot;2&quot;, 16,
    &quot;3&quot;, 24,
    &quot;4&quot;, 32,
    &quot;5&quot;, 40,
    &quot;6&quot;, 48,
    IF(OptumHealth_Services_Buy_Ups__c &gt; 6, 48, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OptumHealth Services Buy-Ups Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>