force-app/main/default/objects/IPM_Information__c/fields/OptumHealth_Services_Score__c.field-meta.xml
<CustomField>
    <fullName>OptumHealth_Services_Score__c</fullName>
    <label>OptumHealth Services Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>