force-app/main/default/objects/IPM_Information__c/fields/OptumRX_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>OptumRX_Pharmacy__c</fullName>
    <inlineHelpText>Choose the type of RX for this customer.</inlineHelpText>
    <label>OptumRX Pharmacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carve-In Standard</fullName>
            </value>
            <value>
                <fullName>Carve-In Intermediate</fullName>
            </value>
            <value>
                <fullName>Carve-In Custom</fullName>
            </value>
            <value>
                <fullName>Carve-Out</fullName>
            </value>
            <value>
                <fullName>OneRx Enhanced Onboarding</fullName>
            </value>
            <value>
                <fullName>OneRx</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>