force-app/main/default/objects/IPM_Information__c/fields/OptumRX_Pharmacy_Score__c.field-meta.xml
<CustomField>
    <fullName>OptumRX_Pharmacy_Score__c</fullName>
    <label>OptumRX Pharmacy Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>