force-app/main/default/objects/IPM_Information__c/fields/Other_Gated_Products__c.field-meta.xml
<CustomField>
    <fullName>Other_Gated_Products__c</fullName>
    <inlineHelpText>Please indicate whether customer has any other Gated products</inlineHelpText>
    <label>Other Gated Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Doctor’s Plan</fullName>
            </value>
            <value>
                <fullName>Kelsey-Seybold</fullName>
            </value>
            <value>
                <fullName>Navigate</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>