force-app/main/default/objects/IPM_Information__c/fields/Other_Gated_Products_Score__c.field-meta.xml
<CustomField>
    <fullName>Other_Gated_Products_Score__c</fullName>
    <label>Other Gated Products Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>