force-app/main/default/objects/IPM_Information__c/fields/Personal_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Personal_Rewards__c</fullName>
    <inlineHelpText>Was Personal Rewards purchased by customer?</inlineHelpText>
    <label>UHC Rewards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Core</fullName>
                <isActive>false</isActive>
                <label>Core</label>
            </value>
            <value>
                <fullName>Flex</fullName>
                <isActive>false</isActive>
                <label>Flex</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>