force-app/main/default/objects/IPM_Information__c/fields/Personal_Rewards_Score__c.field-meta.xml
<CustomField>
    <fullName>Personal_Rewards_Score__c</fullName>
    <label>Personal Rewards Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>