force-app/main/default/objects/IPM_Information__c/fields/Policy_Information__c.field-meta.xml
<CustomField>
    <fullName>Policy_Information__c</fullName>
    <label>Policy Information</label>
    <referenceTo>Policy_Information__c</referenceTo>
    <relationshipLabel>IPM Informations</relationshipLabel>
    <relationshipName>IPM_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>