force-app/main/default/objects/IPM_Information__c/fields/Portfolio_Grid_for_FI__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Grid_for_FI__c</fullName>
    <inlineHelpText>Do you need to create a Portfolio grid? For AAHE business only</inlineHelpText>
    <label>Portfolio Grid for FI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>