force-app/main/default/objects/IPM_Information__c/fields/PPM_Optics__c.field-meta.xml
<CustomField>
    <fullName>PPM_Optics__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>How many PPM Optics requests are required? (Work Orders, Single Sign-on, On-shoring)</inlineHelpText>
    <label>PPM Optics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>