force-app/main/default/objects/IPM_Information__c/fields/PPM_Optics_Score__c.field-meta.xml
<CustomField>
    <fullName>PPM_Optics_Score__c</fullName>
    <label>PPM Optics Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>