force-app/main/default/objects/IPM_Information__c/fields/Pre_Implementation_Audit__c.field-meta.xml
<CustomField>
    <fullName>Pre_Implementation_Audit__c</fullName>
    <inlineHelpText>Please indicate type of benefit intent audit</inlineHelpText>
    <label>Pre-Implementation Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External Benefit Audit</fullName>
            </value>
            <value>
                <fullName>Internal Benefit Audit</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>