force-app/main/default/objects/IPM_Information__c/fields/Pre_Implementation_Audit_Score__c.field-meta.xml
<CustomField>
    <fullName>Pre_Implementation_Audit_Score__c</fullName>
    <label>Pre-Implementation Audit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>