force-app/main/default/objects/IPM_Information__c/fields/Pre_Member_Website__c.field-meta.xml
<CustomField>
    <fullName>Pre_Member_Website__c</fullName>
    <inlineHelpText>Does customer have a pre-member website?</inlineHelpText>
    <label>Pre-Member Website</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>