force-app/main/default/objects/IPM_Information__c/fields/Pre_Member_Website_Score__c.field-meta.xml
<CustomField>
    <fullName>Pre_Member_Website_Score__c</fullName>
    <label>Pre-Member Website Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>