force-app/main/default/objects/IPM_Information__c/fields/Rally__c.field-meta.xml
<CustomField>
    <fullName>Rally__c</fullName>
    <label>Rally</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Rally 2.0 Standard</fullName>
            </value>
            <value>
                <fullName>Rally 2.0 Plus</fullName>
            </value>
            <value>
                <fullName>Rally 2.0 Select</fullName>
            </value>
            <value>
                <fullName>Rally 2.0 Elite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>