force-app/main/default/objects/IPM_Information__c/fields/Rally_Portal__c.field-meta.xml
<CustomField>
    <fullName>Rally_Portal__c</fullName>
    <inlineHelpText>Indicate the type of Rally Portal sold to the customer.</inlineHelpText>
    <label>Rally Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>