force-app/main/default/objects/IPM_Information__c/fields/Rally_Portal_Score__c.field-meta.xml
<CustomField>
    <fullName>Rally_Portal_Score__c</fullName>
    <label>Rally Portal Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>