force-app/main/default/objects/IPM_Information__c/fields/Regulatory_for_FI_Score__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_for_FI_Score__c</fullName>
    <label>Regulatory for FI Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>