force-app/main/default/objects/IPM_Information__c/fields/Staff_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Staff_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IPM Assignment</label>
    <referenceTo>Staff_Assignment__c</referenceTo>
    <relationshipLabel>IPM Informations</relationshipLabel>
    <relationshipName>IPM_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>