force-app/main/default/objects/IPM_Information__c/fields/Stop_Loss_by_UHC__c.field-meta.xml
<CustomField>
    <fullName>Stop_Loss_by_UHC__c</fullName>
    <inlineHelpText>Indicate if customer has Stop Loss (include for both carve-in/carve-out).</inlineHelpText>
    <label>Stop Loss by UHC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UHC Stoploss</fullName>
            </value>
            <value>
                <fullName>UHC Stoploss ESL</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>