force-app/main/default/objects/IPM_Information__c/fields/Stop_Loss_by_UHC_Score__c.field-meta.xml
<CustomField>
    <fullName>Stop_Loss_by_UHC_Score__c</fullName>
    <label>Stop Loss by UHC Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>