force-app/main/default/objects/IPM_Information__c/fields/Surest__c.field-meta.xml
<CustomField>
    <fullName>Surest__c</fullName>
    <inlineHelpText>Does this customer have Surest plans?</inlineHelpText>
    <label>Surest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>