force-app/main/default/objects/IPM_Information__c/fields/Total_Benefit_Sets_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Benefit_Sets_Score__c</fullName>
    <label>Total Benefit Sets Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>