force-app/main/default/objects/IPM_Information__c/fields/Total_of_External_Data_Files__c.field-meta.xml
<CustomField>
    <fullName>Total_of_External_Data_Files__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Input the number of data feeds – both internal and external</inlineHelpText>
    <label>Total # of External Data Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>