force-app/main/default/objects/IPM_Information__c/fields/Total_of_External_Data_Files_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_of_External_Data_Files_Score__c</fullName>
    <label>Total # of External Data Files Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>