force-app/main/default/objects/IPM_Information__c/fields/Total_of_hours__c.field-meta.xml
<CustomField>
    <fullName>Total_of_hours__c</fullName>
    <label>Total of hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>