force-app/main/default/objects/IPM_Information__c/fields/Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time__c</fullName>
    <inlineHelpText>How many travel days are expected?</inlineHelpText>
    <label>Travel Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 travel days</fullName>
            </value>
            <value>
                <fullName>4 travel days</fullName>
            </value>
            <value>
                <fullName>6 travel days</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>