force-app/main/default/objects/IPM_Information__c/fields/Travel_Time_Score__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_Score__c</fullName>
    <label>Travel Time Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>