force-app/main/default/objects/IPM_Information__c/fields/UHC_Hub__c.field-meta.xml
<CustomField>
    <fullName>UHC_Hub__c</fullName>
    <inlineHelpText>Indicate number of 3rd party vendors set-up via the HUB set-up</inlineHelpText>
    <label>UHC Hub</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>