force-app/main/default/objects/IPM_Information__c/fields/UHC_Hub_Score__c.field-meta.xml
<CustomField>
    <fullName>UHC_Hub_Score__c</fullName>
    <label>UHC Hub Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>