force-app/main/default/objects/IPM_Information__c/validationRules/Attending_Enrollment_Meetings_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Attending_Enrollment_Meetings_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(MOD(Attending_Open_Enrollment_Meetings__c, 1) &lt;&gt; 0,
Attending_Open_Enrollment_Meetings__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Attending_Open_Enrollment_Meetings__c</errorDisplayField>
    <errorMessage>Please Enter a Valid Number.</errorMessage>
</ValidationRule>