force-app/main/default/objects/IPM_Information__c/validationRules/Expected_Medical_Membership_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Medical_Membership_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(MOD(Expected_Medical_Membership__c, 1) &lt;&gt; 0,
Expected_Medical_Membership__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Expected_Medical_Membership__c</errorDisplayField>
    <errorMessage>Please Enter a Valid Number.</errorMessage>
</ValidationRule>