force-app/main/default/objects/IPM_Information__c/validationRules/OptumHealth_Services_BuyUps_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>OptumHealth_Services_BuyUps_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(MOD(OptumHealth_Services_Buy_Ups__c, 1) &lt;&gt; 0,
OptumHealth_Services_Buy_Ups__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>OptumHealth_Services_Buy_Ups__c</errorDisplayField>
    <errorMessage>Please Enter a Valid Number.</errorMessage>
</ValidationRule>