force-app/main/default/objects/IPM_Information__c/validationRules/PPM_Optics_Greater_than_5.validationRule-meta.xml
<ValidationRule>
    <fullName>PPM_Optics_Greater_than_5</fullName>
    <active>false</active>
    <errorConditionFormula>PPM_Optics__c &gt; 5</errorConditionFormula>
    <errorDisplayField>PPM_Optics__c</errorDisplayField>
    <errorMessage>Please enter number between 0-5</errorMessage>
</ValidationRule>