force-app/main/default/objects/IPM_Information__c/validationRules/PPM_Optics_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PPM_Optics_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(MOD(PPM_Optics__c, 1) &lt;&gt; 0,
PPM_Optics__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>PPM_Optics__c</errorDisplayField>
    <errorMessage>Please Enter a Valid Number.</errorMessage>
</ValidationRule>