force-app/main/default/objects/IPM_Information__c/validationRules/Total_N_of_External_Data_File_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_N_of_External_Data_File_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(MOD(Total_of_External_Data_Files__c, 1) &lt;&gt; 0,
Total_of_External_Data_Files__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Total_of_External_Data_Files__c</errorDisplayField>
    <errorMessage>Please Enter a Valid Number.</errorMessage>
</ValidationRule>